# unitree_control_interface

./: CMakeLists.txt  README.md  environment.yaml  git-deps.yaml  package.xml  test_g1.py
config/: default_limits.yaml  g1_default_limits.yaml  go2_default_limits.yaml
examples/: g1_inverse_dynamics.py  go2_inverse_dynamics.py
go2_control_interface_common/: autoset_environment_dds.py  watchdog_node.py
go2_control_interface_py/: robot_interface.py
launch/: watchdog.launch.py
unitree_control_interface_common/: autodetect_network_if.py  autoset_environment_dds.py  shutdown_sportsmode.py  watchdog_node.py
unitree_control_interface_py/: __init__.py  g1_interface.py  go2_interface.py  robot_interface.py
